volexc/tests/ui/recovery_service_single.out
Error: found 'fn' expected ';'
   ╭─[ recovery_service_single.vol:4:5 ]
   │
 4 │     fn set(string) -> bool = 2;
   │     ─┬  
   │      ╰── Unexpected 'fn'
   │ 
   │ Note: Expected one of: ';'
───╯
Error: found '}' expected ';'
   ╭─[ recovery_service_single.vol:9:1 ]
   │
 9 │ }
   │ ┬  
   │ ╰── Unexpected '}'
   │ 
   │ Note: Expected one of: ';'
───╯